# CyberBox

./: .gitignore  MARKETPLACE.md  README.md  SECURITY.md  UPSTREAM_README.md  docker-compose.yaml  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  plugin_request.yml
.github/workflows/: caido-plugin-release.yml  cybersandbox-build.yml  ghactor.yml  leaderboard-refresh.yml  push-to-ghcr.yml  sdk-ci.yml  sdk-publish.yml  validate-leaderboard.yml
caido-plugin/: manifest.json  package.json  pnpm-lock.yaml
cli/: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  main.go
cli/cmd/: invoke_claude.go  invoke_claude_test.go  invoke_ollama.go  invoke_ollama_test.go  root.go  stubs.go
cli/cmd/csbx/: PORT_AUDIT.md  csbx.go  doctor.go  doctor_test.go  info.go  info_test.go  list.go  list_test.go  pdtm.go  pdtm_test.go  search.go  search_test.go  sync.go  sync_test.go  verify.go  verify_test.go
cli/internal/anthropic/: client.go  client_test.go
cli/internal/csbx/: baseline_registry.yaml  pdtm.go  pdtm_test.go  state.go  state_test.go  sync.go  sync_test.go  verify.go  verify_test.go
cli/internal/ollama/: client.go  client_test.go
cybersandbox/: .dockerignore  .env.example  .trivyignore  CHANGELOG.md  Dockerfile  SECURITY.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  entrypoint-cyber.sh  mcp-hub-cyber.json
cybersandbox/docs/: image-size-audit.md
cybersandbox/examples/: pdtm-subfinder.yaml
cybersandbox/harbinger-bin/: csbx  harbinger
cybersandbox/prowl-bin/: harbinger-guardrails  prowl  prowl-guardrails
cybersandbox/scripts/: install-malware-tools.sh  seed-wordlists.sh
cybersandbox/tests/: test_csbx_verify.sh
evaluation/: .env.example  README.md  README_zh.md  UPSTREAM_COMPARISON.md  agent_loop.py  cve_lookup.py  leaderboard_schema.json  main.py  merge_leaderboard.py  phase_recon.py  pyproject.toml  run_upstream.sh  triage_writer.py
evaluation/configs/: langgraph_ping.toml
evaluation/result/20251112/: improvement_suggestions.md
evaluation/result/20260425/langgraph/: evaluation_ping.md
evaluation/tests/: test_langgraph_agent_loop.py  test_leaderboard_schema.py  test_merge_leaderboard.sh  test_phase_recon.py
examples/: README.md
examples/_template/: README.md
examples/ag2-integration/: README.md  main.py  smoke_test.ipynb
examples/cybersandbox-js-quickstart/: README.md  main.ts  package.json
examples/langgraph-deepagents-integration/: README.md  main.py  pyproject.toml  sandbox_backend.py
examples/oss-upload/: pyproject.toml
examples/playwright-integration/: README.md
examples/site-to-markdown/: README.md  pyproject.toml
examples/volcengine-provider/: pyproject.toml
harbinger/: CHANGELOG.md  Dockerfile  pyproject.toml
harbinger/patterns/cors_audit/: system.md
harbinger/patterns/diff_for_secrets/: schema.json
harbinger/patterns/diff_for_secrets/examples/: example.output.json
harbinger/patterns/extract_endpoints/: system.md
harbinger/patterns/graphql_recon/: schema.json  system.md
harbinger/patterns/graphql_recon/examples/: example.output.json
harbinger/patterns/header_misconfig_audit/: system.md
harbinger/patterns/header_misconfig_audit/examples/: example.input.txt
harbinger/patterns/jwt_audit/examples/: example.input.txt  example.output.json
harbinger/patterns/race_condition_hypotheses/: schema.json  system.md
harbinger/patterns/race_condition_hypotheses/examples/: example.input.txt  example.output.json
harbinger/patterns/ssrf_chain/: schema.json
harbinger/patterns/ssrf_chain/examples/: example.input.txt  example.output.json
harbinger/patterns/triage_nuclei/: system.md
harbinger/tests/: _pattern_test_helper.sh  test_csbx.sh  test_guardrails.sh  test_harbinger.sh  test_harbinger_doctor.sh  test_pattern_diff_for_secrets.sh  test_pattern_header_misconfig_audit.sh  test_pattern_jwt_audit.sh  test_pattern_oauth_misconfig.sh  test_pattern_ssrf_chain.sh  test_phase_validate.sh
platform/backend/: pyproject.toml
platform/backend/cyberbox/: __init__.py  app.py  auth.py  config.py  crypto.py  db.py  schema.sql
platform/backend/cyberbox/routers/: __init__.py  api.py
platform/backend/cyberbox/services/: agents.py  analytics.py  pr_review.py  scanner.py  templates_ai.py  verify.py
platform/backend/neo/: __init__.py  app.py  auth.py  config.py  crypto.py  hub.py  schema.sql  seed.py
platform/backend/neo/routers/: __init__.py  api.py
platform/backend/neo/services/: agents.py  templates_ai.py  triage.py  verify.py
prowl/: CHANGELOG.md  Dockerfile  pyproject.toml
prowl/patterns/analyze_vulns/: system.md
prowl/patterns/cors_audit/: schema.json
prowl/patterns/cors_audit/examples/: example.input.txt  example.output.json
prowl/patterns/diff_for_secrets/: system.md
prowl/patterns/diff_for_secrets/examples/: example.input.txt
prowl/patterns/graphql_recon/examples/: example.input.txt
prowl/patterns/header_misconfig_audit/: schema.json
prowl/patterns/jwt_audit/: schema.json  system.md
prowl/patterns/oauth_misconfig/: schema.json  system.md
prowl/patterns/oauth_misconfig/examples/: example.input.txt  (+1 more)
prowl/patterns/ssrf_chain/: system.md
prowl/patterns/write_report/: system.md
prowl/tests/: _pattern_test_helper.sh  test_csbx.sh  test_guardrails.sh  test_pattern_cors_audit.sh  test_pattern_graphql_recon.sh  test_pattern_race_condition_hypotheses.sh  test_phase_validate.sh  test_prowl.sh  test_prowl_doctor.sh
sdk/fern/: generators.yml
sdk/go/: README.md
sdk/js/: README.md  package.json
sdk/js/examples/: README.md  advanced-usage.ts  basic-usage.ts  error-handling.ts  package.json  simple-examples.ts  volcengine-provider.ts
sdk/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/python/tests/: test_smoke.py
website/: i18n.json  rspress.config.ts
website/data/: leaderboard.json
website/docs/: README.md
website/docs/en/: 404.md  _nav.json  benchmarks.mdx  index.md
website/docs/zh/: 404.md  _nav.json  index.md
website/theme/components/: HomeLayout.scss  HomeLayout.tsx  LeaderboardTable.tsx
(+48 files in other folders)
