[project]
name = "neo-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neo"]
